# semantic-econ

./: .gitignore  PROJECT_STRUCTURE.md  code.txt  comparison_classifier_results.json  comparison_results.json  pyproject.toml  trash_code.py
migrations/: todolist.md
notebooks/: compute_transcript_statistics.py  run_all_statistics.py  time_series_validation.ipynb  transcript_statistics_template.ipynb
scripts/: compare_climatebert_classifier.py  merge_call_metadata_py  run_analysis_pipeline.py  run_data_pipeline.py  run_ingestion_pipeline.py  run_retrieval_pipeline.py  run_threshold_calibration.py  run_topic_pipeline.py  run_validation_topics.py
src/semantic_measurement/: config.py
src/semantic_measurement/concepts/: concept_retriever.py
src/semantic_measurement/config/: calibration.py  global_calibration.py
src/semantic_measurement/index/: build_faiss.py  faiss_index.py
src/semantic_measurement/indicators/: indicator_builder.py
src/semantic_measurement/parsing/: qna_parser.py
src/semantic_measurement/pipeline/: build_index.py  call_metadata_builder.py  call_metadata_loader.py  embed_segments.py  extract_paragraphs.py  extract_transcripts.py  panel_builder.py  structure_transcripts.py  topic_runner.py
src/semantic_measurement/preprocessing/: filters.py  paragraph_extractor.py  segmentation.py
tests/: region_test.py  run_all_tests.py  test_backward_compatibility.py  test_gpu_embedding.py  test_indicator.py  test_memory_efficiency.py  test_multi_query.py  test_nn_files.py  test_pdf_metadata.py  test_retrieval.py  test_streaming.py
(+9 files in other folders)
